oncoprint - fix overflow issues with track group header dropdowns

Former-commit-id: a84380790720bff40a70c2b3a2b8f59b73585458

--- a/src/pages/resultsView/styles.scss
+++ b/src/pages/resultsView/styles.scss
@@ -80,6 +80,7 @@
             padding: 0 !important;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
             border-radius: $cornerBorderRadius;
+            z-index:10000;
             li {
                 &.oncoprintjs__track_options__separator, &.oncoprintjs__header__separator {
                     border-top: 1px solid #dddddd !important;
